--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ header{
     position: relative;
     padding: 0 2rem;
 }
+.logo{
+    right: 2rem;
+    left: 1px;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    border-radius: 99px;
+}
 .navbar{
     width: 100%;
     height: 60px;
