--- a/index.css
+++ b/index.css
@@ -301,3 +301,15 @@ html{
 		font-size: 30px;
 	}
 }
+@media (max-width:425px){
+    .presentacion h1,h2{
+        font-size: 1.5rem;
+    }
+	.lorem{
+		font-size: 1rem;
+		text-align: center;
+	}
+	.title h2{
+		font-size: 1.5rem;
+	}
+}
