--- a/index.css
+++ b/index.css
@@ -33,9 +33,7 @@ section div.contenido{
 	align-items: center;
 }
 
-section div.contenido div{
-	
-}
+
 
 .restaurar{
 			clear: both;
@@ -48,7 +46,8 @@ html, body, .cover{
 }
 
 body{
-	background: rgb(45, 73, 110);
+	
+ background: url(img/development2.jpg);
 }
 
 /* FONDO */
@@ -89,7 +88,7 @@ header{
     padding: 0;
     border-radius: 99px;
 }
-.navbar{
+.navbar {
     width: 100%;
     height: 60px;
     max-width: 1200px;
@@ -98,6 +97,15 @@ header{
     align-items: center;
     justify-content: space-between;
     font-family: 'calibri';
+	cursor: pointer;
+    transition: scale 0.2 ease;
+	cursor: pointer;
+	transition: .5s;
+}
+
+.navbar .links a:hover{
+    scale: 1.05;
+    color:  #34ffea;
 }
 .navbar .logo a{
     font-size: 1.5rem;
@@ -157,7 +165,7 @@ header{
 .action_btn-2:hover{
     scale: 1.05;
     color: #fff;
-	background-color:#133050 ;
+	background-color: #0d0d13 ;
 }
 
 
@@ -201,7 +209,22 @@ header{
 }
 
 
-
+p span{
+	font-size: 40px;
+	margin: 0 5px;
+	cursor: pointer;
+	color: #555;
+	width: 30px;
+	height: 30px;
+	display: inline-block;
+	line-height: 19px;
+	text-align: center;
+	border-radius: 3px;
+}
+p span:hover{
+  background: #222;
+  color: white;
+}
 
 
 
@@ -231,24 +254,39 @@ header{
 
 
 @media (max-width:425px){
-    .presentacion {
+    .presentacion h1 {
         font-size: 1.8rem;
     }
-}
+	.box-container {
+		align-items: center;
+		width: 100%;
+		height: 100vh;
+		overflow-x: hidden;
+		scroll-snap-type: x mandatory;
+	}
+    .box-container .box{
+		flex: 0 0 100%;
+		width: 100%;
+		object-fit: cover;
+		scroll-snap-align: center;
+	}
+ }
+
 
 .lorem{
 	color: #fff;
 }
 .content{
-	height: 50vh;
+	height: 80vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 .sau{
-	padding: 50px 0;
+	
 	background: #0e1a27;
+	background-color: #050508;
 
 }
 .box-container{
@@ -256,11 +294,12 @@ header{
 	justify-content: center;
 	flex-wrap:wrap;
 	text-align: center;
+	
 }
 .box-container .box{
 	height: 170px;
 	width: 270px;
-	background: #0e1a27;
+	background:#131518;
 	text-align: center;
 	border-radius: 20px;
 	box-shadow: 0 5px 5px ;
@@ -273,13 +312,13 @@ header{
 	text-align: center;
 	border-radius: 50px;
 	color: #fff;
-	background: rgb(45, 73, 110);
+	background:#050508;
 	font-size: 25px;
 	margin: 10px 0;
 }
 .box-container .box h3{
 	font-size: 20px;
-	color: palevioletred;
+	color: rgb(204, 202, 202);
 }
 .box-container .box p{
 	padding: 0 15px;
@@ -332,14 +371,29 @@ html{
 	}
 }
 @media (max-width:425px){
-    .presentacion h1,h2{
+    .presentacion h1{
         font-size: 1.5rem;
     }
 	.lorem{
 		font-size: 1rem;
 		text-align: center;
 	}
-	.title h2{
-		font-size: 1.5rem;
+	.presentacion h2{
+		font-size: medium;
 	}
+	
+	
+}
+
+.carrusel{
+	display: flex;
+	flex-wrap: nowrap;
+	overflow: hidden;
+}
+.elementos{
+	flex: 1 0 auto;
+	margin: 0 50px;
+	background-color: white;
+	width: 500px;
+	height: 500px;
 }
