--- a/nosotros.css
+++ b/nosotros.css
@@ -253,3 +253,20 @@ img{
         margin-left: 50px;
     }
 }
+@media (max-width:320px){
+    .contenedor-sobremi{
+        flex-direction: column;
+    }
+    .contenedor-parrafoboton{
+        width: 90%;
+        margin-left: 30px;
+
+    } 
+    .imagen{
+        margin-left: 10px;
+    }
+    .boton{
+        background: #0e063a;
+        margin-left: 10px;
+    }
+}
